dnl Process this file with autoconf to produce a configure script.
AC_INIT(opencv.pc.in)
AM_CONFIG_HEADER(cvconfig.h)

dnl Set various version strings
MMAJOR=0
MMINOR=9
MSUBMINOR=6
VERSION=$MMAJOR.$MMINOR.$MSUBMINOR
LT_VERSION=`expr $MMAJOR + $MMINOR`:$MSUBMINOR:$MMINOR

AC_SUBST(MMAJOR)
AC_SUBST(MMINOR)
AC_SUBST(MSUBMINOR)
AC_SUBST(VERSION)
AC_SUBST(LT_VERSION)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(opencv, $VERSION)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB

AM_DISABLE_STATIC
AM_PROG_LIBTOOL


os_name = `uname`

dnl Add compiler-specific optimization flags
dnl Check whether to include debugging code

AC_MSG_CHECKING([whether to build debug version (no optimization)])
dnl See if the user wants aggressive optimizations of the code
AC_ARG_ENABLE(debug,
  [  --enable-debug          build debug version (no optimization) [default=no]],
  [debug=yes], [debug=no])
if test x$debug = xyes; then
    AC_MSG_RESULT([yes])
    if test x$ac_cv_prog_gcc = xyes; then
        CXXFLAGS="-ggdb -O0 -DDEBUG -D_DEBUG"
    fi
else
    AC_MSG_RESULT([no])
    AC_MSG_NOTICE( TARGET=$target )
    case $target in
    i686-*-*)
        if test x$ac_cv_prog_gcc = xyes; then
            CXXFLAGS="-g -mcpu=i686 -march=i686 -ffast-math -fomit-frame-pointer"
        fi
        ;;
    *-*-*)
    if test x$ac_cv_prog_gcc = xyes; then
        CXXFLAGS="-g -fomit-frame-pointer"
    fi
    ;;    
    esac
    CXXFLAGS="$CXXFLAGS -O3 -DNDEBUG"
fi

if test x$ac_cv_prog_gcc = xyes; then
    CXXFLAGS="$CXXFLAGS -Wall -fno-rtti -pipe"
fi

dnl ******* add libm 'cause it is used by several libraries below ****
dnl ******* (and by OpenCV itself) ***********************************
AC_CHECK_LIB(m,pow)

dnl
dnl ****************** pkg-config *********************
dnl 

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" == "xno"; then
    AC_MSG_ERROR(You have to install pkg-config to compile OpenCV.)
fi

dnl
dnl ***************** Image codecs configuration *****************
dnl
SAVELIBS="$LIBS"
IMAGELIBS=""

AC_SUBST(IMAGELIBS)

have_jpeg=no
AC_CHECK_HEADER(jpeglib.h,
    AC_CHECK_LIB(jpeg, jpeg_destroy_decompress,
    [have_jpeg=yes
    AC_DEFINE(HAVE_JPEG,,[IJG JPEG codec])
    IMAGELIBS="$IMAGELIBS -ljpeg"]))

have_zlib=no
have_png=no
AC_CHECK_HEADER(zlib.h,
    AC_CHECK_LIB(z, gzopen,
    [have_zlib=yes
    AC_DEFINE(HAVE_ZLIB,,[LZ77 compression/decompression library (used for PNG)])
    IMAGELIBS="$IMAGELIBS -lz -lm"
    LIBS="$LIBS -lz -lm"]))
    
AC_CHECK_HEADER(png.h, AC_DEFINE(HAVE_PNG_H,,[png.h needs to be included]))
AC_CHECK_HEADER([libpng/png.h], AC_DEFINE(HAVE_LIBPNG_PNG_H,,[libpng/png.h needs to be included]))

if test x$ac_cv_header_png_h = xyes -o x$ac_cv_header_libpng_png_h = xyes; then
    AC_CHECK_LIB(png12, png_read_image,
    [have_png=yes
    AC_DEFINE(HAVE_PNG,,[PNG codec])
    IMAGELIBS="-lpng12 $IMAGELIBS"
    LIBS="-lpng12 $LIBS"
    AC_CHECK_FUNCS(png_get_valid png_set_tRNS_to_alpha)])
fi

have_tiff=no
AC_CHECK_HEADER(tiff.h,
    AC_CHECK_LIB(tiff, TIFFReadRGBAStrip,
    [have_tiff=yes
    AC_DEFINE(HAVE_TIFF,,[TIFF codec])
    IMAGELIBS="$IMAGELIBS -ltiff"
    LIBS="$LIBS -ltiff"]))

dnl Restore original LIBS settings...
LIBS="$SAVELIBS"
AC_SUBST(IMAGELIBS)


dnl
dnl ****************** GTK+ 2.x (or later) *********************
dnl 

PKG_CHECK_MODULES(GTK, "gtk+-2.0 gdk-pixbuf-2.0", [have_gtk=yes
                  AC_DEFINE(HAVE_GTK,,[GTK+ 2.x toolkit])], have_gtk=no )
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

dnl
dnl ****************** FFMPEG configuration **********************
dnl

FFMPEGLIBS=""
have_ffmpeg=no


AC_CHECK_HEADER(ffmpeg/avcodec.h,
    AC_CHECK_LIB(avcodec, avcodec_decode_video,
    [have_ffmpeg=yes
    AC_DEFINE(HAVE_FFMPEG,,[FFMpeg video codecs library])
    FFMPEGLIBS="-lavcodec"]))

AC_SUBST(FFMPEGLIBS)

dnl
dnl ****************** IEEE1394 support **************************
dnl

SAVELIBS="$LIBS"
IEEE1394LIBS=""
have_raw1394=no
have_dc1394=no
AC_CHECK_HEADER(libraw1394/raw1394.h,
    AC_CHECK_LIB(raw1394, raw1394_new_handle, [have_raw1394=yes
        LIBS="-lm -lraw1394 $LIBS"]))

if test x$have_raw1394=xyes; then
    AC_CHECK_HEADER(libdc1394/dc1394_control.h,
        AC_CHECK_LIB(dc1394_control, dc1394_camera_on, [have_dc1394=yes
        AC_DEFINE(HAVE_DC1394,,[IEEE1394 capturing support])
	AC_EGREP_HEADER(do_extra_buffering, libdc1394/dc1394_control.h,
	[AC_DEFINE(HAVE_DC1394_095,,[libdc1394 0.9.4 or 0.9.5])])
        IEEE1394LIBS="-lm -lraw1394 -ldc1394_control"]))
fi

LIBS="$SAVELIBS"
AC_SUBST(IEEE1394LIBS)

dnl
dnl ****************** V4L Support **************************
dnl
have_v4l=no
if test x$os_name=xLinux; then
    AC_DEFINE(HAVE_CAMV4L,,[V4L capturing support])
    have_v4l=yes
fi

#CXXOPENMP="no"
#
#AC_ARG_WITH(openmp, dnl
#  [--with-openmp=COMPILER  use OpenMP supporting compiler [default=no] ],
#    [CXXOPENMP="$withval"],[CXXOPENMP="no"])
#if test "$CXXOPENMP" = "no"; then
#    CXXOPENMP="$CXX"
#fi
#
#AC_SUBST(CXXOPENMP)

AC_SUBST(DEBUG)

AC_OUTPUT(
Makefile
opencv.pc
opencv.spec
docs/Makefile
data/Makefile
cxcore/Makefile
cxcore/include/Makefile
cxcore/src/Makefile
cv/Makefile
cv/include/Makefile
cv/src/Makefile
cvaux/Makefile
cvaux/include/Makefile
cvaux/src/Makefile
otherlibs/Makefile
otherlibs/highgui/Makefile
tests/Makefile
tests/trs/Makefile
tests/cv/Makefile
tests/cv/src/Makefile
tests/cxts/Makefile
tests/cxcore/Makefile
tests/cxcore/src/Makefile
samples/Makefile
samples/c/Makefile
apps/Makefile
apps/haartraining/Makefile
apps/haartraining/include/Makefile
apps/haartraining/src/Makefile
)

echo "
Configuration:
    Compiler:                 ${CXX} 
    CXXFLAGS:                 ${CXXFLAGS}

    Install path:             ${prefix}
    
    Use gtk+ 2.x:             ${have_gtk}
    Use libjpeg:              ${have_jpeg}
    Use zlib:                 ${have_zlib}
    Use libpng:               ${have_png}
    Use libtiff:              ${have_tiff}
    Use ffmpeg:               ${have_ffmpeg}
    Use dc1394 & raw1394:     ${have_dc1394}
    Use v4l:                  ${have_v4l}
Now run make...
"
